fixed alignment issue of search bar in mobile view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,6 +87,7 @@ body {
     }
 
     body {
+        height: 100vh !important;
         /* padding-bottom: 15%; */
         /* overflow: hidden; */
     }
